--- a/twatter-ui/src/app/feed/posts/post-list/post-list.component.scss
+++ b/twatter-ui/src/app/feed/posts/post-list/post-list.component.scss
@@ -17,3 +17,7 @@ mat-card {
 .info-text {
     text-align: center;
 }
+
+.post-list {
+  max-height: 20vh;
+}
